# ProjectStarling

./: .gitignore  .gitmodules  404.html  CNAME  LICENSE  Makefile  README.md  build_images.sh  dds_setup.sh  discovery_dds_ros2.xml  docker-compose-2-drones.yml  docker-compose-3-drones.yml  docker-compose-ardupilot.yml  docker-compose-multiple.yml  docker-compose-simple.tcp.yml  docker-compose-simple.yml  docker-compose-test.yml  docker-compose.ap-gazebo.yml  docker-compose.arducopter.yml  docker-compose.multiple.yml  docker-compose.swarm.yml  docker-compose.tcp.yml  docker-compose.yml  index.html  mkdocs.yml  requirements.txt  run_docker.sh  run_k3s.sh  search.html  sitemap.xml
.github/workflows/: main.yml  publish-docs.yml  remove_container_on_close.yaml  update-dev-images.yml  update-image.yml  update-images.yml
buildtools/: README.md  build_images.sh  build_local.sh  build_local_multiplatform.sh  buildx.toml  docker-bake.hcl  remove_images_with_tag.sh  seed_caches.sh
cli/: starling
controller/: Dockerfile.clover  Dockerfile.controller  Dockerfile.mavros  Makefile  README.md
controllers/: Makefile  README.md
controllers/example_controller_python/: Dockerfile  Makefile  README.md  k8.example_controller_python.amd64.yaml
controllers/example_controller_python/example_controller_python/: package.xml  setup.cfg  setup.py
controllers/example_controller_python/example_controller_python/example_controller_python/: controller.py
controllers/example_controller_python/example_controller_python/launch/: example_fly_all.launch.py
controllers/example_controller_simulink/: README.md  example_controller_simulink.slx
controllers/python-demo/: Dockerfile
controllers/simple_takeoff_controller/: Makefile  k8.takeoff_controller_python.amd64.yaml
deployment/: README.md  k8.ap-sitl.amd64.yaml  k8.dashboard.yaml  k8.discovery-server.amd64.yaml  k8.expose-ros.yaml  k8.gazebo-iris.amd64.yaml  k8.mavros-vicon.arm64.yaml  k8.mavros.arm64.yaml  k8.mavros.daemonset.yaml  k8.px4-sitl-simple-offboard.amd64.yaml  k8.px4-sitl.amd64.yaml  k8.ros_monitor.amd64.yaml  k8.starling-gazebo.amd64.yaml  k8.starling-ui-dashly.yaml  k8.vicon.daemonset.yaml  kubernetes.ap-sitl.yml  kubernetes.mavros.yml  pull-through-registry-docker-compose.yaml  start_k3s_agent.sh  start_k8_agent.sh
deployment/resources/: dashboard.admin.yaml
deployment/testing/: Makefile  k8.listener.yaml  k8.talker.yaml  k8.talkerlistener.yaml
details/adding_physical_drone/: index.html
details/background/: index.html
details/build_system/: index.html
details/docker/: index.html
details/flight_arena/: index.html
details/implementation_ap/: index.html
details/kubernetes/: index.html
details/kubernetes-dashboard/: index.html
details/kubernetes-deployment/: index.html
docker-images/controller-base/: index.html
docker-images/mavros/: index.html
docker-images/sim-ardupilot-gazebo/: index.html
docker-images/sim-ardupilot-vehicle/: index.html
docker-images/sim-base-core/: index.html
docker-images/sim-base-px4/: index.html
docker-images/sim-iris-ap/: index.html
docker-images/starling-vicon/: index.html
docker-images/ui/: index.html
docs/: MATLAB.md  README.md  Windows.md  kbd.css  requirements.txt
docs/details/: adding_physical_drone.md  background.md  build_system.md  docker.md  flight_arena.md  implementation_ap.md  kubernetes-dashboard.md  kubernetes-deployment.md  kubernetes.md  px4.md  starling-ui.md  vehicle-setup.md
docs/docker-images/: controller-base.md  mavros.md  mavros2.md  sim-ardupilot-gazebo.md  sim-ardupilot-vehicle.md  sim-base-core.md  sim-base-px4.md  sim-iris-ap.md  starling-ardupilot.md  starling-sim-ardupilot.md  starling-vicon.md  ui.md
docs/guide/: cli.md  collectingdata.md  development-process.md  development.md  different_vehicles.md  example-controller.md  getting-started.md  kube-single-drone-local-machine.md  multiple-drone-drones.md  multiple-drone-local-machine.md  single-drone-drones.md  single-drone-local-machine.md  using-kubectl.md  windows-support.md  writing-a-controller.md
docs/other/: ideas.md  related_projects_and_links.md
docs/snippets/: drone-dev.md  onboard-control.md
docs/tutorials/: fenswood_scenario.md  introduction.md  introduction_px4.md
documentation/details/: kubernetes-dashboard.md  kubernetes-deployment.md  starling-mavros.md
documentation/guide/: kube-single-drone-local-machine.md  multiple-drone-drones.md  multiple-drone-local-machine.md  offboard-control.md  single-drone-local-machine.md
drone/controller/: Dockerfile.controller
drone/controller_template/: Makefile
drone/mavros/: Dockerfile.mavros  Makefile  README.md
guide/cli/: index.html
scripts/: build_docs.sh  docker_tag_push_all.sh  docker_update_existing_images.sh  get_dashboard_token.sh  start_dashboard.sh  start_example_controller.sh  start_k3s.sh  start_k3s_agent.sh  start_single_px4sitl_gazebo.sh  start_single_px4sitl_gazebo_simple_offboard.sh  start_starling_base.sh
search/: search_index.json
simulator/: Makefile
simulator/vehicles/clover2/clover_description/: CMakeLists.txt  package.xml
simulator/vehicles/clover2/clover_description/env-hooks/: clover_description.dsv.in
simulator/vehicles/clover2/clover_description/urdf/: component_snippets.urdf.xacro
simulator/vehicles/clover2/clover_description/urdf/clover/: clover4_macros.xacro
simulator/vehicles/iris-ap/gimbal_plugin/: CMakeLists.txt  package.xml
simulator/vehicles/iris-ap/gimbal_plugin/env-hooks/: gazebo_plugins.sh.in
simulator/vehicles/iris-ap/gimbal_plugin/include/: Gimbal2dPlugin.hpp
simulator/vehicles/iris-ap/gimbal_plugin/src/: Gimbal2dPlugin.cpp
system/: Makefile
system/mavros/starling_mavros_extras/: CMakeLists.txt  package.xml
system/mavros/starling_mavros_extras/include/: estop.hpp  ping.hpp
system/mavros/starling_mavros_extras/src/: estop.cpp  ping.cpp
system/ping_monitor/ping_monitor/ping_monitor_server/: package.xml  setup.cfg  setup.py
system/ping_monitor/ping_monitor/ping_monitor_server/ping_monitor_server/: main.py
testing/: README.md
tests/: utils.bash
(+222 files in other folders)
